--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 #https://codeload.github.com/KurimuzonAkuma/pyrogram/zip/refs/heads/dev
 pyrofork==2.3.61
 #pyrogram
-TgCrypto
+tgcrypto
 pyromod==1.5
 schedule
 APscheduler
